Postgres/Mysql Create Table with primary key